--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -292,7 +292,7 @@
               type="submit"
               name="add"
               class="product-form__submit button button--full-width {% if show_dynamic_checkout %}button--primary{% else %}button--primary{% endif %}"
-              {% if product.selected_or_first_available_variant.available == false or quantity_rule_soldout %}
+              {% if product.selected_or_first_available_variant.inventory_quantity <= 0 or quantity_rule_soldout %}
                 disabled
               {% endif %}
             >
