--- a/sections/custom-featured-coll-sec.liquid
+++ b/sections/custom-featured-coll-sec.liquid
@@ -117,7 +117,6 @@
   .flickity-button {
     border: none;
     border-radius: 4px;
-
     background-color: #1D2E40;
   }
 
@@ -126,12 +125,17 @@
     height: 40px;
   }
   .flickity-button:hover {
-    background-color: #7FC7CF;
+    background-color: #1D2E40;
   }
   .cus-feat-itm--wrapper .flickity-button-icon {
-    width: 50%;
-    height: 50%;
+    /* width: 50%; */
+    /* height: 50%; */
     fill: rgb(255 255 255);
+    height: 14px;
+    width: 14px;
+    position: absolute;
+    left: 12px;
+    top: 12px;
   }
   @media screen and (max-width: 550px) {
 
